examples/errors/parsing/type-empty-params.cn
type Foo() = { Bar : () }

main : () [impure] = ()
